<resources>
    <string name="admin_email">
        adminadmin@g.com
    </string>

    <string name="admin_password">
        1725
    </string>

    <string-array name="admin_order_options">
        <item>Order is ready</item>
        <item>Order is unready</item>
    </string-array>

    <string name="app_name">Shop app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">InPizza</string>
    <string name="nav_header_subtitle">A huge variety of dishes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="home_fragment_title">Our menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="required">
        The field is required
    </string>
    <string name="about_us_description">
        Our Filipino cuisine inspired restaurant is created from the idea that hard-working people occasionally crave a fulfilling rice meal, hence, Rice Craving.  We hope you will love this and our food.
    </string>
    <string name="signup">Sign up</string>
    <string name="menu">Menu</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="content_description_media">In this example, a new instance of ExampleFragment replaces the fragment,</string>
    <string name="secondary_text">Secondary title</string>
    <string name="supporting_text">Supporting text</string>
    <string name="view">View</string>
    <string name="dummy_text">"That doesn't remind us that our storage is public, as it does in firebase database. Are you sure this is the only way of making it public? "</string>
    <string name="order">Order</string>
    <string name="ingredient">Ingredient</string>
    <string name="login_with_google">Login with google</string>
    <string name="add_a_new_recipy">Add a new recipy</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="your_ingredients_go_here">Your ingredients go here</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="_404">404</string>
    <string name="sorry_but_there_are_not_products">Sorry! But there are not products</string>
    <string name="signup_i">Signup</string>
    <string name="add_a_product">Add a product</string>
    <string name="the_image_of_dish">The image of dish</string>
    <string name="search_hint">Type here ...</string>
    <string name="app_label">Dishes</string>
    <string name="our_orders">Our orders</string>
    <string name="orders">Orders</string>
    <string name="delete_an_order">Delete an order</string>
    <string name="there_are_no_orders">There are no orders</string>
    <string name="order_new_dishes_in_our_app">Order new dishes in our app</string>
    <string name="visit_the_page">Visit the page</string>
    <string name="your_orders">Your orders</string>
    <string name="image">Image</string>
    <string name="specify_the_number_of_your_order">Specify the number of your order</string>
    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="sorry">Sorry</string>
    <string name="but_there_no_orders">But there no orders</string>
    <string name="change_the_status_of_order">Change the status of order</string>
    <string name="admin_panel">Admin panel</string>
    <string name="unready_orders">Unready orders</string>
    <string name="ready_orders">Ready orders</string>
    <string name="the_list_of_orders">The list of orders</string>
    <string name="contact_with_email">Contact with email</string>
    <string name="call_us">Call us</string>
    <string name="email_to_us">Email to us</string>
    <string name="results">Results</string>
</resources>