<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/signup_i" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us"
            />

        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/add_a_product"
            />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"
            android:title="@string/orders"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_assignment_return_24"
            android:title="@string/log_out"
            />

        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/admin_panel"
            />
    </group>

</menu>