<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".ui.home.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_twice"
        android:gravity="start"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/space"
            style="@style/TextAppearance.AppCompat.Display1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_description"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/space_half"
            style="@style/TextAppearance.AppCompat.Body1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:id="@+id/contact_btn"
            android:paddingBottom="@dimen/space_half"
            android:layout_marginTop="@dimen/space_half"
            style="@style/Widget.AppCompat.Button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_to_us"
            android:id="@+id/contact_btn_email"
            android:paddingBottom="@dimen/space_half"
            android:layout_marginTop="@dimen/space_half"
            style="@style/OrangeButton"
            />
    </LinearLayout>
</LinearLayout>