<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_twice"
    android:gravity="start"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.SignupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:paddingTop="@dimen/space"
        android:paddingBottom="@dimen/space"
        android:gravity="center_horizontal" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space"
        android:paddingBottom="@dimen/space_half"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Email"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:helperText="@string/required"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginBottom="@dimen/space_half"
        app:startIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
        app:helperText="@string/required"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/textButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginBottom="@dimen/space_half"
        android:layout_marginTop="@dimen/space"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        />
</LinearLayout>