<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unready_orders"
                android:id="@+id/showUnready"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready_orders"
                android:id="@+id/showReady"
                />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_twice"
            android:id="@+id/admin_container"
            tools:context=".ui.home.OrderList">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="The list of orders"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:paddingTop="@dimen/space"
                android:paddingBottom="@dimen/space"
                android:gravity="center_horizontal" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/no_admin_orders"
                android:layout_marginTop="@dimen/space"
                android:layout_marginBottom="@dimen/space"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_half"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sorry"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/space_half"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/but_there_no_orders"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:paddingBottom="@dimen/space_half"
                        style="@style/TextAppearance.AppCompat.Body2"
                        />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/space_for_available_orders"
                >

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_orders"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    style="@style/OrangeButton"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>